--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -208,7 +208,7 @@
             left: 50%;
             transform: translateX(-50%);
             z-index: 5; /* Ensure it's above the matrix */
-            color: white;
+            color: #00FF00; /* Matrix green */
             font-family: 'Bebas Neue', sans-serif;
             text-align: center;
         }
@@ -230,7 +230,7 @@
 
     <div class="container" id="contentContainer">
         <h2>Form Data Encoder</h2>
-        <p>Please paste your raw form data (including boundaries) into the textarea below.</p>
+        <p style="color: #00FF00;">Please paste your raw form data (including boundaries) into the textarea below.</p>
 
         <!-- Textarea for user input -->
         <textarea id="rawData" placeholder="Paste form data here..."></textarea>
