--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -370,7 +370,7 @@
 
                     const urlEncodedData = encodeFormData(formData);
                     progressBar.style.width = '100%';
-                    document.getElementById('encodedData').textContent = `Encoded form data: \n${urlEncodedData}`;
+                    document.getElementById('encodedData').textContent = `\n${urlEncodedData}`;
                     showPopup('Encoded Successfully!');
 
                     setTimeout(() => {
