--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -235,6 +235,8 @@
 
     <div class="container" id="contentContainer">
         <h2>Form Data Encoder</h2>
+        <p style="color: #00FF00;">Content-Type: application/x-www-form-urlencoded</p>
+        <p style="color: #00FF00;">Content-Type: application/x-www-form-urlencoded; charset=UTF-8</p>
         <p style="color: #00FF00;">Please paste your raw form data (including boundaries) into the textarea below.</p>
 
         <!-- Textarea for user input -->
